# rs-status

./: Cargo.toml  shell.nix
src/: config.rs  main.rs
