[package]
name = "rs-status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shellwords = "1"
x11 = { version = "2", features = ["xlib", "xlib_xcb"] }
serde_yaml = "0.9"
serde = {version = "1.0", features = ["derive"] }
xdg  = "2.4.1"
